# parallel

./: .gitignore  CLAUDE.md  CMakeLists.txt  FIXES_SUMMARY.md  Makefile  README.md  TEST_RESULTS.md  a.cpp  ast_consumer.cpp  ast_consumer.h  build_dependency.cpp  code_parallelizer.cpp  common.h  data_structures.h  dependency_graph.cpp  dependency_graph.h  file_operations.cpp  file_operations.h  function_analyzer.cpp  function_analyzer.h  functions.cpp  functions.h  graph_visualizer.html  hybrid_parallelizer.cpp  hybrid_parallelizer.h  lexer.cpp  lexer.h  loop_analyzer.cpp  loop_analyzer.h  loop_parallelizer.cpp  main.cpp  main_extractor.cpp  main_extractor.h  minimal_test.cpp  mpi_functions.cpp  mpi_management.cpp  mpi_management.h  mpi_parallelizer.cpp  mpi_parallelizer_new.cpp  mpi_start.sh  (+14 more)
.github/: copilot-instructions.md
b.out.dSYM/Contents/Resources/DWARF/: b.out
b.out.dSYM/Contents/Resources/Relocations/x86_64/: b.out.yml
tests/: CMakeLists.txt  README.md  quick_test.cpp  run_phase1_tests.cpp  run_phase2_quick_test.cpp  run_phase2_tests.cpp  run_targeted_test.cpp  test_framework.h  test_function_extraction.cpp  test_phase1_integration.cpp  test_phase2_function_deduplication.cpp  test_phase2_integration.cpp  test_phase2_loop_parallelization.cpp  test_phase2_typedef_handling.cpp  test_typedef_extraction.cpp  test_variable_initialization.cpp
